--- a/tax.ipynb
+++ b/tax.ipynb
@@ -4195,7 +4195,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
+   "id": "4dd428ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(r'C:\\Users\\JKHATRI\\Downloads\\Tax Documents\\eToro\\Etoro Buy Sell EUR.csv')\n",
+    "data[\"Date\"] = pd.to_datetime(data[\"Date\"], format='%Y-%m-%d %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "d2cbe87a",
    "metadata": {
     "pycharm": {
@@ -4257,7 +4268,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4269,7 +4280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "id": "6c7241b5",
    "metadata": {
     "pycharm": {
@@ -4291,7 +4302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "id": "918e395e",
    "metadata": {
     "pycharm": {
@@ -4368,7 +4379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "id": "b5f1da2a",
    "metadata": {
     "pycharm": {
@@ -4389,7 +4400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "id": "9fb10d46",
    "metadata": {
     "pycharm": {
@@ -4405,7 +4416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "id": "cabfc3ea",
    "metadata": {
     "pycharm": {
@@ -4419,7 +4430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "27c20542",
    "metadata": {
     "pycharm": {
@@ -4434,7 +4445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "id": "c8d7740f",
    "metadata": {
     "pycharm": {
@@ -4449,7 +4460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "id": "feb2d732",
    "metadata": {
     "pycharm": {
@@ -4458,12 +4469,13 @@
    },
    "outputs": [],
    "source": [
-    "Report_Stock = Report2021[Report2021.Stock.isin(Stocks)].reset_index(drop=True)"
+    "Report_Stock2020 = Report2020[Report2020.Stock.isin(Stocks)].reset_index(drop=True)\n",
+    "Report_Crypto2020 = Report2020[Report2020.Stock.isin(Cryptos)].reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "id": "83a47cd1",
    "metadata": {
     "pycharm": {
@@ -4472,12 +4484,13 @@
    },
    "outputs": [],
    "source": [
-    "Report_Crypto = Report2021[Report2021.Stock.isin(Cryptos)].reset_index(drop=True)\n"
+    "Report_Stock2021 = Report2021[Report2021.Stock.isin(Stocks)].reset_index(drop=True)\n",
+    "Report_Crypto2021 = Report2021[Report2021.Stock.isin(Cryptos)].reset_index(drop=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "id": "52002ab3",
    "metadata": {
     "pycharm": {
@@ -4486,10 +4499,11 @@
    },
    "outputs": [],
    "source": [
-    "Report2020.to_csv(r'C:\\Users\\JKHATRI\\Downloads\\Tax Documents\\eToro\\Etoro Report 2020.csv')\n",
+    "Report_Stock2020.to_csv(r'C:\\Users\\JKHATRI\\Downloads\\Tax Documents\\eToro\\Etoro Stock Report 2020.csv')\n",
+    "Report_Crypto2020.to_csv(r'C:\\Users\\JKHATRI\\Downloads\\Tax Documents\\eToro\\Etoro Crypto Report 2020.csv')\n",
     "\n",
-    "Report_Stock.to_csv(r'C:\\Users\\JKHATRI\\Downloads\\Tax Documents\\eToro\\Etoro Stock Report 2021.csv')\n",
-    "Report_Crypto.to_csv(r'C:\\Users\\JKHATRI\\Downloads\\Tax Documents\\eToro\\Etoro Crypto Report 2021.csv')\n"
+    "Report_Stock2021.to_csv(r'C:\\Users\\JKHATRI\\Downloads\\Tax Documents\\eToro\\Etoro Stock Report 2021.csv')\n",
+    "Report_Crypto2021.to_csv(r'C:\\Users\\JKHATRI\\Downloads\\Tax Documents\\eToro\\Etoro Crypto Report 2021.csv')\n"
    ]
   },
   {
